# VIOT-Project

./: .env.template  .gitignore  LICENSE  README.MD  docker-compose-win.yml  docker-compose.yml
ControlServer/: .gitignore  DOCKERFILE  README.md  config.py  config.yml.template  database_connector.py  email_server.py  models.py  mqtt_client.py  pyproject.toml  server.py
ESP/: .gitignore  README.md  platformio.ini
ESP/src/: config.h.template  main.cpp  test.cpp
Server/: README.md
SmartPostfach/src/: main.cpp
WebServer/: .gitignore  DOCKERFILE  Dockerfile  README.md  app.py  config.py  config.yml  config.yml.template  configweb.py  control_server.py  email_server.py  models.py  mqtt_clientweb.py  pyproject.toml  requirements.txt
WebServer/database/: data.db
WebServer/templates/: index.html
mosquitto/config/: mosquitto.conf  mosquitto_passwd.passwd.template
timescale/: init-db.sql.template
